--- a/src/main/resources/templates/student/information.html
+++ b/src/main/resources/templates/student/information.html
@@ -1,70 +1,105 @@
 <!DOCTYPE html>
 <html lang="en" >
+<script>
+		window.onload=function(){
+        var provinces=["北京市","天津市","上海市","重庆市","河北省","山西省","辽宁省","吉林省","黑龙江省","江苏省","浙江省","安徽省","福建省","江西省","山东省","河南省","湖北省","湖南省","广东省","海南省","四川省","贵州省","云南省","陕西省","甘肃省","青海省","台湾省","内蒙古自治区","广西壮族自治区","西藏自治区","宁夏回族自治区","新疆维吾尔自治区","香港特别行政区","澳门特别行政区"];
+    for(var i in provinces){
+        var op=new Option(provinces[i],provinces[i]);
+        document.getElementById("province").options.add(op);
+    }
+}
+function createSchool(){
+    var pro=$("#province option:selected").attr("value");
+    document.getElementById("school").options.length=1;
+    $.ajax({
+                        url: "/login/schools?province="+pro,
+                        type: "GET",
+                        success: function (data) {
+                         $.each(data,function(i,item){
+                          $("#school").append(
+                                    "<option value=\"" + item.name + "\" id=\"" + item.name + "\">" + item.name + "</option>")
+			                          });
+                        }
+                    })
+}
+	</script>
 <head>
     <meta charset="UTF-8">
     <title>完善个人信息</title>
-    <link rel="stylesheet" href="css/informationStyle.css" />
-</head> 
-
+    <link rel="stylesheet" href="/css/informationStyle.css" />
+</head>
 <body>
-	<!--顶部标题栏-->
-    <div class="header">
-		<img class="img-logo" src="img/logo.png" />
-		<img class="head" src="img/字体设计.png" />
-		    <a  href="myStudy.html" class="nav1">我的学习</a>
-		    <a href="message.html" class="nav2">消息</a>
-		 </div>
-    <div class="form">
+<!--顶部标题栏-->
+<div class="header">
+    <img class="img-logo" src="/img/logo.png" />
+    <img class="head" src="/img/字体设计.png" />
+    <a  href="myStudy.html" class="nav1">我的学习</a>
+    <a href="message.html" class="nav2">消息</a>
+</div>
+<div class="form">
     <!--注册页-->
     <div class="tab-content">
-        <div id="signup">   
+        <div id="signup">
             <h1>请继续完善个人信息</h1>
             <form action="/" method="post">
-            <!-- 姓名行-->
-            <div class="field-wrap">
-                <label>
-                                                   姓名<span class="req">*</span>
-                </label>
-                <input type="name" required autocomplete="off" />
-            </div>
-        
-            <!--  注册之 邮箱-->
-            <div class="field-wrap">
-                <label>
-                                                     学工号<span class="req">*</span>
-                </label>
-                <input type="school_id" required autocomplete="off"/>
-            </div>
-          
-            <div class="field-wrap">
-                <label>
-                                                    学校<span class="req">*</span>
-                </label>
-                <input type="school" required autocomplete="off"/>
-            </div>
-            
-            <!--<div class="field-wrap">-->
-            <div class="sexChoice">
-            <select name="sex" class="sex1">  
-                <option value="female" >女</option>   
-                <option value="male" selected>男</option>   <!--预选设置       -->
-            </select> 
-            </div>
-            <div class="field-wrap">
-                <textarea rows="5" cols="10" class="introduce">介绍一下自己吧</textarea>
-            </div>
-            <button type="submit" class="button button-block"/>确定</button>
-          
+                <!-- 姓名行-->
+                <div class="field-wrap">
+                    <label>
+                        姓名<span class="req">*</span>
+                    </label>
+                    <input type="name" required autocomplete="off" />
+                </div>
+
+                <!--  注册之 邮箱-->
+                <!--<div class="field-wrap">-->
+                <div class="sexChoice">性别：
+                    <select id="sex" class="sex1">
+                        <option id="female" >女</option>
+                        <option id="male" selected>男</option>   <!--预选设置       -->
+                    </select>
+                </div>
+
+                <div class="sexChoice">省份：
+                    <select id="province" class="sex1" onchange="createSchool()">
+                        <option value ="请选择学校所在的省份">请选择学校所在的省份</option>
+                    </select>
+                </div>
+
+                <div class="sexChoice">学校：
+                    <select class="sex1" id="school">
+                        <option value ="请选择学校">请选择学校</option>
+                    </select>
+                </div>
+
+                <div class="sexChoice">身份：
+                    <select id="identity" class="sex1">
+                        <option id="student" selected>学生</option>
+                        <option id="teacher" >教师</option>
+                        <option id="manager" >管理员</option><!--预选设置       -->
+                    </select>
+                </div>
+
+                <div class="field-wrap">
+                    <label>
+                        学工号<span class="req">*</span>
+                    </label>
+                    <input type="school_id" required autocomplete="off"/>
+                </div>
+                <div class="field-wrap">
+                    <textarea rows="5" cols="10" class="introduce">介绍一下自己吧</textarea>
+                </div>
+                <button type="submit" class="button button-block"/>确定</button>
+
             </form>
         </div>
-        
+
         <!--登录页-->
         <div id="login"/>
-        
+
     </div><!-- tab-content -->
-      
-    </div> <!-- /form -->
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script  src="js/myjs.js"></script>
+
+</div> <!-- /form -->
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script  src="/js/myjs.js"></script>
 </body>
 </html>
