--- a/src/main/resources/templates/student/login.html
+++ b/src/main/resources/templates/student/login.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" >
+<script src="/js/jquery-1.9.1.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/jquery.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/jquery.isotope.min.js"></script>
+<script src="/js/jquery.inview.min.js"></script>
+<script src="/js/cookie3.js"></script>
 <head>
     <meta charset="UTF-8">
     <title>请先登录</title>
-    <link rel="stylesheet" href="css/loginStyle.css">
+    <link rel="stylesheet" href="/css/loginStyle.css">
 </head> 
 
 <body>
 	<!--顶部标题栏-->
     <div class="header">
-		<img class="img-logo" src="img/logo.png" />
-		<img class="head" src="img/字体设计.png" />
-		    <a  href="myStudy.html" class="nav1">我的学习</a>
-		    <a href="message.html" class="nav2">消息</a>
+		<img class="img-logo" src="/img/logo.png" />
+		<img class="head" src="/img/字体设计.png" />
+		    <a class="nav1">我的学习</a>
+		    <a class="nav2">消息</a>
 		 </div>
     <div class="form">
     <!--注册/登录导航-->
@@ -84,6 +90,6 @@
       
     </div> <!-- /form -->
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script  src="js/myjs.js"></script>
+    <script  src="/js/myjs.js"></script>
 </body>
 </html>
