--- a/src/main/resources/templates/student/information.html
+++ b/src/main/resources/templates/student/information.html
@@ -33,8 +33,8 @@ function createSchool(){
 <div class="header">
     <img class="img-logo" src="/img/logo.png" />
     <img class="head" src="/img/字体设计.png" />
-    <a  href="myStudy.html" class="nav1">我的学习</a>
-    <a href="message.html" class="nav2">消息</a>
+    <a  class="nav1">我的学习</a>
+    <a  class="nav2">消息</a>
 </div>
 <div class="form">
     <!--注册页-->
