shabi的一天上传

--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -8,13 +8,17 @@
 	<script src="/js/cookie3.js"></script>
 	<script>
 		window.onload=function(){
-		delCookie("userID");
 		getCourseList();
 		getSchoolList();
 		str="";
-		str=str+"<img class=\"img-logo\" src=\"/img/logo.png\" /><img class=\"head\" src=\"/img/字体设计.png\" /><a  onclick=\"joinStudy()\" class=\"nav1\">我的学习</a><a onclick=\"joinMessage()\" class=\"nav2\">消息</a>";
+		str1="你好！  "+getCookie("name");
+		if(getCookie("identification")==1)
+		str2="我的课程";
+		else if(getCookie("identification")==2)
+		str2="我的学习";
+		str=str+"<img class=\"img-logo\" src=\"/img/logo.png\" /><img class=\"head\" src=\"/img/字体设计.png\" /><a  onclick=\"joinStudy()\" class=\"nav1\">"+str2+"</a><a onclick=\"joinMessage()\" class=\"nav2\">消息</a>";
         if(getCookie("userID")==null)  str=str+"<a href=\"/student/login\" class=\"nav3\">登录/注册</a><img id=\"icon\" src=\"/img/头像.png\" />";
-        else        str=str+"<a class=\"nav3\">陈滨</a><img id=\"icon\" src=\"/img/头像1.png\" />";
+        else        str=str+"<a class=\"nav3\">"+str1+"</a><img id=\"icon\" src=\"/img/头像1.png\" />";
         $("#header").html(str);
     }
 	</script>
