--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -132,7 +132,6 @@ function goSchool(id)
 	     $("#schoolViewPanel").html(str);
          },
          error:function(data){
-         alert("111");
          }
          });
    }
@@ -148,7 +147,7 @@ function goSchool(id)
 		</div>
 		<!--轮播图-->
 		<div class="carousel">
-			
+			<img class="carousel" src="/img/background.jpg"/>
 		</div>
 		<!--课程推荐-->
 		<div class="class-navigation">
